# zai-api

./: .dockerignore  .gitignore  4.6v-response.jsonl  Dockerfile  README.md  config.py  docker-compose.yml  env_template.txt  helpers.py  main.py  openai_api.py  proxys.txt.example  pyproject.toml  requirements.txt  signature.py  token_pool.py  upstreams.txt.example  zai_transformer.py  客户端收到响应.jsonl
.github/workflows/: docker-build-push.yml
src/: __init__.py  config.py  conversation_state.py  fe_version.py  header_manager.py  helpers.py  image_handler.py  message_processor.py  openai_api.py  schemas.py  signature.py  token_pool.py  toolify_config.py  toolify_handler.py  zai_transformer.py
src/services/: __init__.py  chunk_builder.py  network_manager.py  openai_service.py  response_parser.py
src/toolify/: __init__.py  core.py  detector.py  parser.py  prompt.py
tests/: test_concurrency.py  test_concurrency_simple.py  test_non_stream.py  test_proxy.py  test_stream_modes.py  test_toolify_integration.py
