[project]
name = "zai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browserforge>=1.2.3",
    "fastapi>=0.118.3",
    "fastuuid>=0.13.5",
    "furl>=2.1.4",
    "httpx[http2]>=0.28.1",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "structlog>=25.4.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.37.0",
]
