[project]
name = "zai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.0.9",
    "browserforge>=1.0.0",
    "fastapi>=0.104.0",
    "fastuuid>=0.7.0",
    "furl>=2.1.0",
    "httpx[brotli,http2,zstd]>=0.25.0",
    "openai>=2.3.0",
    "orjson>=3.11.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.24.0",
    "zstandard>=0.21.0",
]
